# knowledge-agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
claim_kb/: README.md  __init__.py  api.py  auth.py  bootstrap.py  chunking.py  classify.py  cli.py  config.py  embeddings.py  exceptions.py  filesystem.py  ingest.py  knowledge_store.py  ocr.py  retrieval.py  schemas.py  split.py  storage.py  vector_store.py
evals/: azure_research.json
examples/claim_kb/: README.md
examples/ingest/: README.md
infrastructure/: __init__.py  config.py  errors.py  responses.py  runtime.py
ingest/: README.md  __init__.py  api.py  bootstrap.py  chunking.py  classify.py  cli.py  config.py  exceptions.py  filesystem.py  ingest.py  knowledge_store.py  ocr.py  schemas.py  split.py  vector_store.py
knowledge_agent/: __init__.py
knowledge_agent/infrastructure/: __init__.py  responses.py  runtime.py
research/: __init__.py  agent.py  bootstrap.py  cli.py  llm.py  schemas.py
research_agent/: __init__.py  agent.py  bootstrap.py  cli.py  llm.py
tests/: test_api.py  test_config.py  test_embeddings.py  test_ingest.py  test_retrieval.py  test_storage.py
tests/claim_kb/: __init__.py  conftest.py  test_api.py  test_bootstrap.py  test_classify.py  test_cli.py  test_config.py  test_embeddings.py  test_ingest.py  test_knowledge_store.py  test_schemas.py  test_storage.py
tests/contract/: __init__.py  test_llm_providers.py
tests/infrastructure/: test_config.py  test_responses.py  test_runtime.py
tests/ingest/: test_api.py  test_bootstrap.py  test_classify.py  test_cli.py  test_config.py  test_embeddings.py  test_ingest.py  test_knowledge_store.py  test_schemas.py  test_storage.py
tests/knowledge_agent/: test_config.py  test_responses.py  test_runtime.py
(+14 files in other folders)
