[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-agent"
version = "0.1.0"
description = "Claim knowledge base ingestion and cited local research agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-documentintelligence>=1.0.0",
    "azure-ai-projects>=2.2.0",
    "azure-identity>=1.17.0",
    "chromadb>=1.0.0",
    "openai>=2.44.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "pypdf>=4.2",
    "snowflake-snowpark-python>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["infrastructure*", "ingest*", "research*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "live_openrouter: calls the configured live OpenRouter model",
    "live_azure: calls the configured live Azure AI Projects deployment",
]
